[package]
name = "browsing_stats"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = true

[dependencies]
ansi_term = { version = "0.12.1", features = ["derive_serde_style"] }
clap = { version = "4.1.8", features = ["derive", "string"] }
diesel = { version = "2.0.3", features = ["sqlite"] }
dirs = "5.0.1"
ini = "1.3.0"
libc = "0.2.140"
owo-colors = { version = "3.5.0", features = ["supports-color", "supports-colors"]}
regex = "1.7.1"
supports-color = "2.0.0"
url = "2.2.0"
# termion = { version = "2.0.1", features = ["serde"] } -- windows doesnt sypport the sys craete yet
walkdir = "2.3.2"
whoami = "1.5.0"
winapi = "0.3.9"
